# pycounts

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: conf.py  example.ipynb
src/pycounts/: pycounts.py
tests/: einstein.txt  test_pycounts.py
