[tool.poetry]
name = "pycounts"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Prince Jecco"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.8"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "myst-nb (>=1.3.0,<2.0.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "sphinx-autoapi (>=3.6.1,<4.0.0)",
    "sphinx-rtd-theme (>=3.1.0,<4.0.0)"
]
